Fix max and min widths so form doesnt stretch too much on full screen

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
     padding-left: 25px;
     padding-right:25px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    max-width:500px;
 }
 .title {
     font-weight: 700;
@@ -56,7 +57,8 @@ body {
     font-weight: 400;
 }
 input {
-    width:40vw;
+    max-width:40vw;
+    min-width:30vw;
     height:5vh;
     border-radius:5px;
     border:0.5px solid black;
@@ -67,7 +69,8 @@ input {
     background: url(images/icon-error.svg) no-repeat scroll 7px 7px;
 }
 .button {
-    width:40vw;
+    max-width:40vw;
+    min-width:30vw;
     height:12.5%;
     background-color: hsl(154, 59%, 51%);
     color:white;
